fix(Sidebar): Fix sidebar glitches on mobile & desktop

--- a/components/tailored/settings/modal/Modal.less
+++ b/components/tailored/settings/modal/Modal.less
@@ -184,6 +184,9 @@ p {
           position: static;
           z-index: 0;
         }
+        .not-sidebar {
+          min-width: calc(100% - 3rem);
+        }
       }
     }
   }
